Separating Demo Apps into different classes.

--- a/landan/compilers/vs2010/Landan/DemoApplication/DemoApplication.vcxproj
+++ b/landan/compilers/vs2010/Landan/DemoApplication/DemoApplication.vcxproj
@@ -84,7 +84,14 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="..\..\..\..\src_demo_app\apps\SimpleBasicApplication.cpp" />
+    <ClCompile Include="..\..\..\..\src_demo_app\apps\SimpleWindowedApplication.cpp" />
     <ClCompile Include="..\..\..\..\src_demo_app\Main.cpp" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="..\..\..\..\src_demo_app\apps\Apps.h" />
+    <ClInclude Include="..\..\..\..\src_demo_app\apps\SimpleBasicApplication.h" />
+    <ClInclude Include="..\..\..\..\src_demo_app\apps\SimpleWindowedApplication.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
